@@ -10,16 +10,14 @@
 	<th>Node</th>
 	<th>Username</th>
 	<th>Origin</th>
-	<th>User ID</th>
 	<th>Logged in Since</th>
 	<th>Traffic IN/OUT</th>
 </tr>
 {section name=i loop=$users_array}
 <tr>
     <td>{$users_array[i].name}</td>
-    <td>{$users_array[i].username}</td>
+    <td><a href="user_log.php?user_id={$users_array[i].user_id}">{$users_array[i].username}</a></td>
     <td>{$users_array[i].account_origin}</td>
-    <td><a href="user_log.php?user_id={$users_array[i].user_id}">{$users_array[i].user_id}</a></td>
     <td>{$users_array[i].timestamp_in|date_format:"%Y/%m/%d %H:%M:%S"}</td>
     <td>{$users_array[i].incoming}/{$users_array[i].outgoing}</td>
     <td></td>
