@@ -1,5 +1,6 @@
 2005-05-30 Philippe April <philippe@ilesansfil.org>
 	* Show username in user_stats.php instead of user_id
+	  and in other admin pages
 
 2005-05-30 Francois Proulx <francois.proulx@gmail.com>
 	* Changed language selectbox name so it does not clash with ISF's domain cookie
